# rb

./: .gitignore  111  123  API_DOCUMENTATION.md  COMPLETION_REPORT.md  Docker_是什么.md  Docker_简单类比.txt  Dockerfile  EDGEONE_MCP_SETUP.md  GITHUB_MCP_SETUP.md  INSTALLATION_GUIDE.md  LOCAL_DEVELOPMENT.md  PROJECT_LOCATION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  SOLUTION_SUMMARY.md  START_HERE.md  TROUBLESHOOTING.md  anniversary.html  diagnose.bat  diagnose.sh  docker-compose.yml  html (2).html  html.html  index.html  install-check.bat  install-check.sh  kunsthalle.html  pom.xml  pyproject.toml  start.bat  start.bat位置说明.txt  start.sh  快速修复.txt  快速启动指南.txt  新建 文本文档.html  网站尝试  错误信息解释.md  (+2 more)
Website Beautification with Autumn Theme/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Website Beautification with Autumn Theme/src/: App.tsx  index.css
Website Beautification with Autumn Theme/src/components/: ArrowDown.tsx  AutumnLeaf.tsx  BackgroundMusic.tsx  CalloutIcons.tsx  FallingPetals.tsx  FlowerPetal.tsx  GreenLeaf.tsx  (+10 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
my-html-project/: README.md  package.json
my-html-project-1/: README.md  package.json
my-html-project-1/src/: index.html
my-html-project/src/: index.html
question_search/: __init__.py  config.py  data_sources.py  llm.py  main.py  ocr.py  pipeline.py  retriever.py
tests/: test_pipeline.py
yanbao-website/: index.html  script.js  styles.css
yanbao1/: README.md  index.html
(+37 files in other folders)
