[project]
name = "question-search"
version = "0.1.0"
description = "Prototype modules for a question search application"
authors = [{name = "AI Agent"}]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
